<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>value</groupId>
		<artifactId>root</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>integrationTesting</artifactId>
	
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			    <version>5.10.0</version>
			<scope>test</scope>
		</dependency>




		<dependency>
			<groupId>value</groupId>
			<artifactId>domain</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	
	
		<build>
		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>18</source>
						<target>18</target>
						<verbose>true</verbose>
						<compilerArgs>
							                    <arg>--add-exports</arg>
							   <arg>domain/domain=integrationTesting</arg>
                
 					 
						</compilerArgs>

					</configuration>
				</plugin>
					</plugins>
		</pluginManagement>

	</build>
</project>